--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </section>
       <section class="scroll-section" id="scroll-section-1">
-        <p>
+        <p class="description">
           <strong>보통 스크롤 영역</strong>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis id, ex
           eligendi quam delectus provident explicabo sint officiis? Eius quod
